The /conversions now response with nice key: array of possible convertations
