# goconverter/internal/apidocs/swagger.json
@@ -70,9 +70,9 @@
         "server.ConversionsResponse": {
             "type": "object",
             "properties": {
-                "output": {
-                    "type": "array",
-                    "items": {
+                "possibleConvertationFormats": {
+                    "type": "object",
+                    "additionalProperties": {
                         "type": "array",
                         "items": {
                             "type": "string"
